...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_cep"
            android:hint="00000-000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:editable="true"
            android:padding="5dp"
...
            android:maxLength="9"
            android:background="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/botao_consulta"
        android:layout_below="@id/formulario_cep"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Consultar" />
...
